--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -2,24 +2,24 @@
 
   <!-- TITLE -->
   <div class="row">
-    <div class="col-sm-10">
+    <div class="col-sm-10 nopadding">
       <h1><%=  @conveying.boat_name %></h1>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-2 nopadding text-right">
       <%= link_to 'edit conveying', edit_conveying_path, class: "btn btn-primary m-0" %>
     </div>
   </div>
 
   <!-- FIRST ROW in mokup -->
   <div class="row">
-    <div class="col-sm-10">
+    <div class="col-sm-10 nopadding">
       <p>Conveying from : <%= @conveying.start_location%></p>
     </div>
     <div class="d-flex col-sm-1">
       <i class="fas fa-heart light-grey p-1"></i>
       <p>Save</p>
     </div>
-    <div class="d-flex col-sm-1">
+    <div class="d-flex col-sm-1 nopadding justify-content-end">
       <i class="far fa-share-square light-grey p-1"></i>
       <p>share</p>
     </div>
