--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -84,7 +84,7 @@
 
     <div class="col-4">
       <h5>Pick your dates:</h5>
-      <%= simple_form_for [@conveying, @booking] do |f| %>
+      <%= simple_form_for [@conveying, @booking], remote: true do |f| %>
         <%= f.input :start_time, label: false, as: :string, required: false, input_html: {id: "range_start", class: "d-none"} %>
         <%= f.input :end_time, as: :string, label: false, required: false, input_html: {id: "range_end", class: "d-none"} %>
         <%= f.button :submit, "Book Conveying", :class => "btn btn-primary" %>
