--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
   </head>
 
   <body>
-      <p class="notice"><%= notice %></p>
-      <!-- <p class="alert"><%#= alert %></p> -->
+    <% if notice.present? %>
+      <p class="notice"><%= flash[:notice] %></p>
+    <% end %>
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
