--- a/app/views/conveyings/edit.html.erb
+++ b/app/views/conveyings/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="container pt-5 col-6">
-  <h1 class="text-center mb-5">Create a new conveying</h1>
+  <h1 class="text-center mb-5">Update your conveying</h1>
 
   <%= simple_form_for @conveying do |f| %>
   <div class="form-row">
       <div class="col-3 form-group">
-        <%= f.input :boat_name%>
+        <%= f.input :boat_name, :placeholder => "Black Pearl"%>
       </div>
       <div class="col-3 form-group">
         <%= f.input :boat_type, collection: Conveying::BOATTYPES %>
@@ -18,10 +18,10 @@
     </div>
     <div class="form-row">
       <div class="col-6 form-group">
-    <%= f.input :start_location%>
+    <%= f.input :start_location, :placeholder => "Cannes"%>
       </div>
       <div class="col-6 form-group">
-    <%= f.input :arrival_location%>
+    <%= f.input :arrival_location, :placeholder => "Gênes"%>
       </div>
     </div>
     <div class="form-row">
@@ -34,6 +34,6 @@
     </div>
     <%= f.input :photos, as: :file, input_html: { multiple: true, id: 'photo-input' } %>
     <%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
-    <%= f.button :submit, "Create", :class => "btn btn-primary w-100" %>
+    <%= f.button :submit, "Update", :class => "btn btn-primary w-100" %>
   <% end %>
 </div>
