--- a/app/views/conveyings/new.html.erb
+++ b/app/views/conveyings/new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for @conveying do |f| %>
   <div class="form-row">
       <div class="col-3 form-group">
-        <%= f.input :boat_name%>
+        <%= f.input :boat_name, :placeholder => "Black Pearl" %>
       </div>
       <div class="col-3 form-group">
         <%= f.input :boat_type, collection: Conveying::BOATTYPES %>
@@ -18,15 +18,15 @@
     </div>
     <div class="form-row">
       <div class="col-6 form-group">
-    <%= f.input :start_location%>
+    <%= f.input :start_location, :placeholder => "Cannes"%>
       </div>
       <div class="col-6 form-group">
-    <%= f.input :arrival_location%>
+    <%= f.input :arrival_location, :placeholder => "Gênes"%>
       </div>
     </div>
     <div class="form-row">
       <div class="col-6 form-group">
-        <%= f.input :start_date, label: 'Available from:', as: :string, required: false, input_html: { class: "datepicker"} %>
+        <%= f.input :start_date, label: 'Available from:', as: :string, required: false, input_html: { class: "datepicker"}%>
       </div>
       <div class="col-6 form-group">
         <%= f.input :arrival_date, as: :string, label: 'Need to arrive before:', required: false, input_html: { class: "datepicker"} %>
