--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,8 +13,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+          <li class="nav-item">
+            <%= link_to "Create a new conveying", new_conveying_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
@@ -50,8 +50,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+          <li class="nav-item">
+            <%= link_to "Create a new conveying", new_conveying_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
