--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -38,14 +38,11 @@
     <div class="col-8 pl-0">
         <!-- <h2><%=  @conveying.boat_name %></h2> -->
 
-      <div class="star border-bottom">
-        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
-        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
-        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
-        <i class="far fa-star" style="color:blue; font-size:12px;"></i>
+      <div class="border-bottom">
 <!--    ATTENTION si on utilise current_user > on ne peut accéder à la show que quand on est log -->
 <!--    <p style="font-size:12px;"><%#= current_user.first_name %> is the owner of this boat</p> -->
-        <p style="font-size:12px;"><%= @conveying.user.first_name %> is the owner of this boat</p>
+        <h6><%= @conveying.user.first_name %> is the owner of this boat</h6>
+        <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
       </div>
 
       <div class="d-flex align-items-center">
@@ -60,7 +57,7 @@
 
       <div class="d-flex align-items-center">
         <i class="far fa-calendar-check pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Conveying due date <%= @conveying.arrival_date %></p>
+        <p class="mb-0 mt-3"> Conveying due on: <%= @conveying.arrival_date.strftime("%B %d, %Y")  %></p>
       </div>
 
       <div class="d-flex align-items-center">
@@ -70,11 +67,11 @@
 
       <div class="d-flex align-items-center border-bottom pb-3">
         <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Remuneration : <%= @conveying.price %>€</p>
+        <p class="mb-0 mt-3"> Payment : <%= @conveying.price %>€</p>
       </div>
 
       <div id="map-show"
-        style="width: 100%; height: 300px;"
+        style="width: 100%; height: 300px; margin-top: 8px;"
         data-markers="<%= @marker.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         >
