--- a/app/views/conveyings/new.html.erb
+++ b/app/views/conveyings/new.html.erb
@@ -13,7 +13,7 @@
         <%= f.input :capacity, collection: Conveying::CAPACITIES%>
       </div>
       <div class="col-3 form-group">
-        <%= f.input :price, input_html: { min: 0 } %>
+        <%= f.input :price, input_html: { min: 0 }, label: 'Price (€)'%>
       </div>
     </div>
     <div class="form-row">
