--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -57,8 +57,7 @@
 
       <div class="d-flex align-items-center">
         <i class="far fa-calendar-check pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Conveying due date <%= @conveying.arrival_date.strftime("%d-%m-%Y") %></p>
-      </div>
+        <p class="mb-0 mt-3"> Conveying due on: <%= @conveying.arrival_date.strftime("%B %d, %Y") %></p> </div>
 
       <div class="d-flex align-items-center">
         <i class="fas fa-user-tie pr-3 mt-3" style="color:light-grey;"></i>
