--- a/app/assets/stylesheets/components/_boat-image.scss
+++ b/app/assets/stylesheets/components/_boat-image.scss
@@ -16,9 +16,10 @@
   grid-row: 1/3;
   grid-column: 1/3;
   width: 100%;
-
+  object-fit: cover;
 }
 
 .boat-image-child-two  {
   width: 100%;
+  object-fit: cover;
 }
